// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runner will advance through multiple renders 1`] = `
<p>
  third initial render
</p>
`;

exports[`runner will pass props to a ES2015 class component 1`] = `
<GreetingClass
  name="nick"
/>
`;

exports[`runner will pass props to a stateless functional component 1`] = `
<Greeting
  name="nick"
/>
`;

exports[`runner will pass props to the takeProps effect 1`] = `
<p>
  Hello 
  nick
</p>
`;

exports[`runner will pass props to the takeProps effect 2`] = `
<p>
  Hello 
  bob
</p>
`;

exports[`runner will pass props to the takeProps effect 3`] = `
<p>
  Hello 
  dole
</p>
`;

exports[`runner will render properly 1`] = `
<p>
  initial render
</p>
`;
